# Binary-data-coding-algorithms

./: README.md  base64.cpp  base64.h  base64_coder.cpp  cleanup_and_stage_allowed.sh  rle.h
task_1_Encoding_schemas/: CMakeLists.txt  decoder_service.h  main_decode.cpp  main_encode.cpp  main_rle_encode.cpp  rle_service.h  rle_strategy.h
task_1_Encoding_schemes/: .gitignore  CMakeLists.txt  base64_coder.cpp  base64_strategy.h  common_types.h  decoder_service.h  encoder_service.h  main_encode.cpp  main_rle_decode.cpp  rle.cpp  rle_service.h
